Cleanup unused attributes

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -199,6 +199,10 @@ body > .footer {
     right: 3px;
     top: 8px;
 
+    .btn-xs {
+      border-radius: 11px;
+    }
+
     .remove-connection {
       .hover_show {
         display: none;
