--- a/app/views/bookingsync_portal/admin/rentals/_remote_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_remote_rental.html.erb
@@ -1,5 +1,4 @@
-<div class="panel panel-remote" id="<%= dom_id remote_rental %>"
-  data-uid="<%= remote_rental.uid %>">
+<div class="panel panel-remote" id="<%= dom_id remote_rental %>">
   <div class="panel-body-grid">
     <div class="panel-body-grid-photo">
     </div>
