--- a/app/views/bookingsync_portal/admin/help/index.html.erb
+++ b/app/views/bookingsync_portal/admin/help/index.html.erb
@@ -1,6 +1,6 @@
 <article>
   <header>
-    <%= link_to icon("times", t('.close')), admin_root_url, class: "pull-right" %>
+    <%= link_to icon("times", t('.close')), admin_root_path, class: "pull-right" %>
     <h1><%=t '.title' %></h1>
   </header>
   <%= render 'help' %>
