--- a/app/views/layouts/bookingsync_portal/_menu.html.erb
+++ b/app/views/layouts/bookingsync_portal/_menu.html.erb
@@ -13,7 +13,7 @@
         </button>
       <%- end -%>
       <div>
-        <%= link_to icon("globe", BookingsyncPortal.portal_name), admin_root_url,
+        <%= link_to icon("globe", BookingsyncPortal.portal_name), admin_root_path,
           class: "navbar-brand h1",
           data: { toggle: "dropdown" } %>
         </a>
