--- a/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
@@ -13,7 +13,7 @@
           <small><%= remote_rental.display_name %></small>
       </h4>
       <div class="status">
-        <%= link_to bookingsync_portal.admin_connection_path(rental.connection),
+        <%= link_to BookingsyncPortal::Engine.routes.url_helpers.admin_connection_path(rental.connection),
           class: ["btn", "btn-xs", "remove-connection", rental.remote_rental.synchronized? ? "btn-success" : "btn-warning"],
           data: { disable_with: t('.disconnecting_rental') }, method: :delete, remote: true do %>
           <% unless rental.remote_rental.synchronized? %>
