--- a/app/views/bookingsync_portal/admin/rentals/show.js.erb
+++ b/app/views/bookingsync_portal/admin/rentals/show.js.erb
@@ -1,7 +1,7 @@
 $("#<%= dom_id @rental %>").replaceWith(
   <%- if @rental.connected? %>
    "<%=j render 'connected_rental', rental: @rental, remote_rental: @rental.remote_rental,
-      disconnect_url: bookingsync_portal.admin_connection_url(@rental.connection) %>");
+      disconnect_url: BookingsyncPortal::Engine.routes.url_helpers.admin_connection_path(@rental.connection) %>");
   <%- else %>
    "<%=j render 'rental', rental: @rental %>");
   <%- end %>
