add placeholder for warning message

--- a/app/views/layouts/bookingsync_portal/admin.html.erb
+++ b/app/views/layouts/bookingsync_portal/admin.html.erb
@@ -11,6 +11,7 @@
 </head>
 <body data-messagebus-channel="<%= messagebus_channel %>">
   <%= render partial: '/layouts/bookingsync_portal/menu' %>
+  <%= render partial: '/layouts/bookingsync_portal/warning_top' %>
   <div class="container container-fullscreen">
     <%= render '/layouts/bookingsync_portal/flash' %>
     <%= yield %>
