--- a/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
@@ -17,9 +17,9 @@
           class: ["btn", "btn-xs", "remove-connection", rental.remote_rental.synchronized? ? "btn-success" : "btn-warning"],
           data: { disable_with: t('.disconnecting_rental') }, method: :delete, remote: true do %>
           <% unless rental.remote_rental.synchronized? %>
-            <span class="hover_hide"><%= icon('spinner') %></span>
+            <span class="hover_hide"><%= icon("far", "spinner") %></span>
           <% else %>
-            <span class="hover_hide"><%= icon('check') %></span>
+            <span class="hover_hide"><%= icon("far", "check") %></span>
           <% end %>
           <span class="hover_show"><%= t('.disconnect_rental') %></span>
         <% end %>
