--- a/app/views/bookingsync_portal/admin/rentals/_new_remote_account.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_new_remote_account.html.erb
@@ -1,3 +1,3 @@
 <%= link_to new_admin_remote_account_path, class: "btn btn-default" do %>
-  <%= icon :plus %> <%= t '.connect_accounts' %>
+  <%= icon "far", "plus" %> <%= t '.connect_accounts' %>
 <% end %>
