--- a/app/views/bookingsync_portal/admin/rentals/_rentals.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_rentals.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 <%- else -%>
   <div class="lead text-center well">
-    <p class=""><%= icon "far", "thumbs-up fa-lg" %></p>
+    <p class=""><%= icon "fa", "thumbs-up fa-lg" %></p>
     <p><%=t ".all_synchronized" %></p>
   </div>
 <%- end -%>
