--- a/app/views/bookingsync_portal/admin/rentals/_rentals.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_rentals.html.erb
@@ -6,9 +6,14 @@
   <% not_connected_rentals.each do |rental| %>
     <%= render rental %>
   <% end %>
+<%- elsif search_by_rentals? || search_by_remote_rentals? %>
+  <div class="lead text-center well">
+    <p class=""><%= icon 'fa', 'search fa-lg' %></p>
+    <p><%=t '.no_results' %></p>
+  </div>
 <%- else -%>
   <div class="lead text-center well">
-    <p class=""><%= icon 'thumbs-up fa-lg' %></p>
+    <p class=""><%= icon 'fa', 'thumbs-up fa-lg' %></p>
     <p><%=t '.all_synchronized' %></p>
   </div>
 <%- end -%>
