--- a/app/views/layouts/bookingsync_portal/admin.html.erb
+++ b/app/views/layouts/bookingsync_portal/admin.html.erb
@@ -9,7 +9,7 @@
   <%= stylesheet_link_tag 'admin/application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
-<body data-messagebus-channel="<%= messagebus_channel %>">
+<body data-messagebus-channel="<%= messagebus_channel %>" data-paginated-view="<%=use_paginated_view%>">
   <%= render partial: '/layouts/bookingsync_portal/menu' %>
   <div class="container container-fullscreen">
     <%= render '/layouts/bookingsync_portal/flash' %>
