Apply PR feedback

--- a/app/assets/javascripts/bookingsync_portal/admin/templates/pagination.hbs
+++ b/app/assets/javascripts/bookingsync_portal/admin/templates/pagination.hbs
@@ -1,6 +1,6 @@
 <nav>
   <ul class="pager">
-    <li><a href="#" data-type="previous">Previous</a></li>
-    <li><a href="#" data-type="next">Next</a></li>
+    <li><a class="btn" href="#" data-type="previous">Previous</a></li>
+    <li><a class="btn" href="#" data-type="next">Next</a></li>
   </ul>
 </nav>
