--- a/app/views/layouts/bookingsync_portal/admin.html.erb
+++ b/app/views/layouts/bookingsync_portal/admin.html.erb
@@ -13,8 +13,8 @@
   data-messagebus-channel="<%= messagebus_channel %>" 
   data-paginated-view="<%=use_paginated_view%>"
   data-items-per-page="<%= BookingsyncPortal.items_per_page %>"
-  data-rentals-records-count="<%= @not_connected_rentals.count %>"
-  data-remote-rentals-records-count="<%= @remote_rentals.count %>"
+  data-rentals-records-count="<%= not_connected_rentals_count %>"
+  data-remote-rentals-records-count="<%= remote_rentals_count %>"
   >
   <%= render partial: '/layouts/bookingsync_portal/menu' %>
   <div class="container container-fullscreen">
