Add extend_rentals_index_action gem setting to extend rentals#index_with_search and rentals#index actions
Fix sync logic in index and index_with_search actions

Skip system keys as a trigger to start searching

Add filtered_strategies gem settings

Add optional account arg for all filter strategies

Update app/assets/javascripts/bookingsync_portal/admin/lib/list-backend-filter.js.coffee to get search params based on form instead of getting them based on 1 input field

--- a/app/views/layouts/bookingsync_portal/admin.html.erb
+++ b/app/views/layouts/bookingsync_portal/admin.html.erb
@@ -11,7 +11,7 @@
 </head>
 <body 
   data-messagebus-channel="<%= messagebus_channel %>" 
-  data-paginated-view="<%=use_paginated_view%>"
+  data-paginated-view="<%=use_paginated_view? %>"
   data-items-per-page="<%= BookingsyncPortal.items_per_page %>"
   data-rentals-records-count="<%= not_connected_rentals_count %>"
   data-remote-rentals-records-count="<%= remote_rentals_count %>"
