--- a/app/assets/javascripts/bookingsync_portal/admin/templates/filter_input.hbs
+++ b/app/assets/javascripts/bookingsync_portal/admin/templates/filter_input.hbs
@@ -1,6 +1,6 @@
 <form class="filterform" action="#">
   <div class="form-group">
     <label class="control-label" for="{{inputId}}">Search in listings</label>
-    <input class="filterinput form-control" type="text" id="{{inputId}}">
+    <input class="filterinput form-control" type="text" id="{{inputId}}" name="query">
   </div>
 </form>
