Decouple UI entities from data layer in order to be independent for any channel app

--- a/app/views/bookingsync_portal/admin/rentals/_channel_listing.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_channel_listing.html.erb
@@ -1,10 +1,10 @@
-<div class="panel panel-remote" id="<%= dom_id remote_rental %>">
+<div class="panel panel-remote" id="<%= dom_id channel_listing %>">
   <div class="panel-body-grid">
     <div class="panel-body-grid-photo">
     </div>
     <div class="panel-body-grid-text">
       <h4 title="<%= RemoteRental.human_attribute_name(:uid) %>
-        <%= remote_rental.uid %>"><%= remote_rental.display_name %></h4>
+        <%= channel_listing.uid %>"><%= channel_listing.display_name %></h4>
       <p class="text-overflow"></p>
     </div>
   </div>
