--- a/app/views/bookingsync_portal/admin/rentals/index_with_search.js.erb
+++ b/app/views/bookingsync_portal/admin/rentals/index_with_search.js.erb
@@ -1,17 +1,17 @@
 <%- if search_by_rentals? %>
   list = $(".bookingsync-rentals-list.rentals-list .rentals-list-scroll")
-  data = $("<%=escape_javascript(render file: 'bookingsync_portal/admin/rentals/index') %>")
+  data = $("<%=escape_javascript(render template: 'bookingsync_portal/admin/rentals/index') %>")
   newList = $(data).find(".bookingsync-rentals-list.rentals-list .rentals-list-scroll").first()
   list.html(newList.html())
-  
+
   $(".bookingsync-rental").draggableRental()
   $(".panel.panel-remote").droppableRemoteRental()
 <%- elsif search_by_remote_rentals? %>
   list = $(".remote-rentals-list.rentals-list .rentals-list-scroll")
-  data = $("<%=escape_javascript(render file: 'bookingsync_portal/admin/rentals/index') %>")
+  data = $("<%=escape_javascript(render template: 'bookingsync_portal/admin/rentals/index') %>")
   newList = $(data).find(".remote-rentals-list.rentals-list .rentals-list-scroll").first()
   list.html(newList.html())
-  
+
   $(".bookingsync-rental").draggableRental()
   $(".panel.panel-remote").droppableRemoteRental()
 <%- end %>
